<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/openUrlLayout"
        android:background="@drawable/open_url_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/openURLOldIcon"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:scaleType="fitEnd"
            android:contentDescription="@string/learn_more_icon_default"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@mipmap/redirectios"
            android:visibility="visible"
            android:tint="@color/learn_more_white"/>

        <TextView
            android:id="@+id/openURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/learn_more_default_content_desc"
            android:focusable="true"
            android:paddingStart="0dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/learn_more"
            android:textAllCaps="false"
            android:textColor="@color/learn_more_white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/openURLIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:contentDescription="@string/learn_more_icon_default"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="6dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@mipmap/redirect"
            android:visibility="gone"
            android:tint="@color/learn_more_black"/>
    </LinearLayout>
</FrameLayout>